css: weird article spacing fix

--- a/views/core.css
+++ b/views/core.css
@@ -77,7 +77,6 @@ main {
 article {
   margin-left: auto; margin-right: auto;
   width: 90%;
-  min-height: 100%;
 }
 
 @media screen and (min-width: 1024px) {
